[gd_scene load_steps=7 format=3 uid="uid://ctc3ep724ir5f"]

[ext_resource type="Texture2D" uid="uid://k4ot52o4rq66" path="res://Asset/parallax background/plx-1.png" id="1_kgjoi"]
[ext_resource type="Script" path="res://Script/ParallaxBackground.gd" id="1_pousr"]
[ext_resource type="Texture2D" uid="uid://c6ojdtp6sl7of" path="res://Asset/parallax background/plx-2.png" id="2_ob6ty"]
[ext_resource type="Texture2D" uid="uid://bmslvodpinybx" path="res://Asset/parallax background/plx-3.png" id="3_klq86"]
[ext_resource type="Texture2D" uid="uid://qq4hkvbsdeqm" path="res://Asset/parallax background/plx-4.png" id="4_x0ra4"]
[ext_resource type="Texture2D" uid="uid://cugdcqkndv1" path="res://Asset/parallax background/plx-5.png" id="5_rcq4l"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("1_pousr")

[node name="ParallaxLayer1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1280, 0)

[node name="Plx-1" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer1"]
position = Vector2(640, 358)
scale = Vector2(3.33333, 3.35185)
texture = ExtResource("1_kgjoi")

[node name="Plx-2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer1"]
position = Vector2(640, 360)
scale = Vector2(3.33333, 3.33333)
texture = ExtResource("2_ob6ty")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(2, 2)
motion_mirroring = Vector2(1280, 0)

[node name="Plx-3" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(640, 361)
scale = Vector2(3.33333, 3.32407)
texture = ExtResource("3_klq86")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(2, 2)
motion_mirroring = Vector2(1280, 0)

[node name="Plx-4" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(640, 360)
scale = Vector2(3.33333, 3.33333)
texture = ExtResource("4_x0ra4")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(4, 4)
motion_mirroring = Vector2(1280, 0)

[node name="Plx-5" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(640, 360)
scale = Vector2(3.33333, 3.33333)
texture = ExtResource("5_rcq4l")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -68.0
offset_right = 39.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Controlls" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Controlls"

[node name="About" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "About
"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="ParallaxBackground" method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Controlls" to="ParallaxBackground" method="_on_controlls_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/About" to="ParallaxBackground" method="_on_about_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="ParallaxBackground" method="_on_exit_pressed"]
